# My_Personal_Portfolio

./: README.md
3D_objects_viewer/src/: Makefile
3D_objects_viewer/src/C_Backend/: 3dviewer.h  affine_transformations.c  helpers.c  parser.c  v_f_creator.c
3D_objects_viewer/src/test/: test.c
CPP Simple Calculator/: calc_model_facade.cc  container_calc_app.h  main.cc
CPP Simple Calculator/check/: main_test.cc  test_buttons.cc  test_calc.cc  test_credit.cc  test_rpn.cc
CPP Simple Calculator/controller/: graph_controller.cc  math_controller.cc  math_controller.h
CPP Simple Calculator/doc/: smartcalc.aux  smartcalc.texi  smartcalc.toc  version.texi
CPP Simple Calculator/doc/images/: calc.eps  deposit.eps  graph.eps
CPP Simple Calculator/helpers/: fast_float.h  string_helpers.h
CPP Simple Calculator/interfaces/: credit_model_public_interface.h  deposit_controller_interface.h  deposit_model_interface.h  deposit_model_public_interface.h  graph_model_interface.h  graph_model_public_interface.h  math_controller_interface.h  math_model_interface.h
CPP Simple Calculator/interfaces/observer/: observer_credit_interfaces.h  observer_deposit_interfaces.h  observer_graph_interfaces.h
CPP Simple Calculator/ui/: graph_view.ui  main_view.ui  math_view.ui  qrc.qrc
CPP Simple Calculator/view/: graph_view.cc  graph_view.h  main_view.cc  view_helpers.cc  view_helpers.h
CPP_3D_Viewer_app/: Makefile  README.md
CPP_3D_Viewer_app/Project/: 3d-2ver.pro  3d-2ver.pro.user.9fd3993  glview.cpp  glview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  ubercontroller.cpp  ubercontroller.h
CPP_STL_containers/: Makefile  README.md  s21_containers.h  s21_containersplus.h
CPP_STL_containers/s21_containersplus/: s21_array.h  s21_array.tpp
CPP_STL_containers/tests/: tests_map.cpp  tests_set.cpp
CPP_Simple_Calculator/: CMakeLists.txt  Makefile  README.md  calc_model_facade.h  container_calc_app.cc
CPP_Simple_Calculator/check/: test_deposit.cc
CPP_Simple_Calculator/controller/: credit_controller.cc  credit_controller.h  deposit_controller.cc  deposit_controller.h  graph_controller.h
CPP_Simple_Calculator/doc/: smartcalc.dvi
CPP_Simple_Calculator/helpers/: math_helpers.cc  math_helpers.h  notifier.cc  notifier.h  string_helpers.cc
CPP_Simple_Calculator/interfaces/: credit_controller_interface.h  credit_model_interface.h  graph_controller_interface.h  math_model_public_interface.h
CPP_Simple_Calculator/interfaces/observer/: observer_interface.h  observer_math_interfaces.h
CPP_Simple_Calculator/models/: calc_exception.h  finance_exception.h
CPP_Simple_Calculator/models/credit/: credit_model.h
CPP_Simple_Calculator/models/deposit/: deposit_model.h
CPP_Simple_Calculator/models/graph/: graph_model.h
CPP_Simple_Calculator/models/math/: lexeme.cc  lexer.cc
CPP_Simple_Calculator/ui/: credit_view.ui  deposit_view.ui
CPP_Simple_Calculator/ui/images/: calc.icns
CPP_Simple_Calculator/view/: credit_view.cc  credit_view.h  deposit_view.cc  deposit_view.h  main_view.h  math_view.cc  math_view.h
CPP_Simple_Calculator/view/widgets/: qcustomplot.h
CPP_matrix_h/: README.md
CPP_matrix_h/tests/: test.h
C_decimal_h/: Makefile  README.md
C_math_h/: Makefile  README.md  s21_acos.c  s21_atan.c  s21_pow.c  s21_sin.c  test_utils.c  test_utils.h
C_matrix_h/: README.md  s21_calc_complements.c  s21_matrix.h  s21_mult_matrix.c  s21_sub_matrix.c  s21_transpose.c
C_matrix_h/tests/: s21_determinant_test.c  s21_inverse_matrix_test.c  s21_sum_matrix_test.c  test_main.c
C_string_h/: Makefile  README.md  main.c  s21_atoi.c  s21_atol.c  s21_insert.c  s21_memcmp.c  s21_memmove.c  s21_memset.c  s21_sprintf.c  s21_sscanf.c  s21_sscanf.h  s21_strchr.c  s21_strcpy.c  s21_strcspn.c  s21_strerror.c  s21_strerror.h  s21_string.h  s21_strlen.c  s21_strncmp.c  s21_strncpy.c  s21_strpbrk.c  s21_strrchr.c  s21_strspn.c  s21_strstr.c  s21_to_lower.c  s21_to_upper.c  s21_trim.c
C_string_h/tests/: test_insert.c  test_memcmp.c  test_sscanf.c  test_trim.c
C_string_h/tests_includes/: s21_tests.h
My variation of matrix.h lib (CPP)/src/: Makefile
My_variation_of_math.h_lib/src/: s21_asin.c  s21_ceil.c  s21_exp.c  s21_floor.c  s21_fmod.c  s21_log.c  s21_math.c  s21_math.h  s21_sqrt.c  test_s21_math.c
My_variation_of_matrix.h_lib/src/: Makefile  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_inverse_matrix.c  s21_mult_number.c  s21_remove_matrix.c  s21_sum_matrix.c
ShipsGame/: functions.cpp  main.cpp  ships.h
Simple_Calculator/src/: mainwindow.ui
TicTacToe/: gamelib.cpp  gamelib.h  main.cpp
(+90 files in other folders)
